<resources>
    <string name="app_name">Intern18Summer</string>
    <string name="label_count_likes">0 likes</string>
    <string name="time_item_2">11 to 12pm</string>
    <string name="time_item_3">1pm</string>
    <string name="time_item_1">8 to 10am</string>
    <string name="content_item_1">New subpage for Janet</string>
    <string name="content_item_2">Catch up with Tom</string>
    <string name="content_item_3">Lunch with Diane</string>
    <string name="num_13">13</string>
    <string name="num_12">12</string>
    <string name="num_11">11</string>
    <string name="num_10">10</string>
    <string name="num_9">9</string>
    <string name="num_8">8</string>
    <string name="num_7">7</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="label_good_morning">Good Morning!</string>
    <string name="label_february">FEBRUARY</string>
    <string name="label_view_view_group">View View Group</string>
    <string name="label_fragment_activity">Fragment Activity</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_sign_up_login">SignUp?</string>
    <string name="label_login">Login</string>
    <string name="label_sign_up">SIGN UP</string>
    <string name="ex_viewpager_tablayout">ViewPager_TabLayout</string>
    <string name="label_asyncTask_thread_handler">AsyncTask_Thread_Handler</string>
    <string name="label_async_task">AsyncTask</string>
    <string name="label_thread">Thread</string>
    <string name="label_handler">Handler</string>
    <string name="label_download_images">Download Images</string>
    <string name="label_recycler_view">RecyclerView</string>
    <string name="label_username">Username</string>
    <string name="or_login_in_using_a_social_account">Or login in using a social account</string>
    <string name="do_not_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="label_error">error</string>
    <string name="label_unit_test">Unit Test</string>
    <string name="check_username_length">Username Length is greater than 6 and less than 22 characters</string>
    <string name="check_username_least_uppercase_not_continue">Username have at least 2 uppercase not continue</string>
    <string name="check_username_not_space_and_special_character">Username does not contain special characters and spaces</string>
    <string name="check_username_most_two_digit_continue">Username have at most 2 digit continue</string>
    <string name="check_username_not_start_uppercase_or_digit">Username do not start with uppercase or numbers</string>
    <string name="check_password_different_username">Password and Username must be different</string>
    <string name="check_password_least_two_special_or_digit">Password have at least two special characters or digit</string>
    <string name="check_password_length_and_not_repeated_character_than_two_continue">Password have minimum length is 8 characters and can not be repeated 1 character more than 2 times in a row</string>
    <string name="check_password_not_end_digit_or_special_character">Password do not end with digit or special characters</string>
    <string name="check_password_least_three_uppercase_character_not_continue">Password have at least 3 uppercase characters but not consecutive</string>
    <string name="check_login_success">Login success!!!</string>

    <string-array name="username_array">
        <item>Keylor Navas</item>
        <item>Raphael Varane</item>
        <item>Daniel Carvajal</item>
        <item>Keylor Navas</item>
        <item>Marcelo Vieira</item>
        <item>Carlos Casemiro</item>
        <item>Marco Asensio</item>
        <item>Karim Benzema</item>
        <item>Thibaut Courtois</item>
        <item>Marcos Alonso</item>
        <item>Keylor Nike</item>
        <item>Ethan Ampadu</item>
    </string-array>
</resources>
