<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_view_viewgroup" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundDateMainActivity"
            android:padding="5dp"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sun"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/mon"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tue"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/wed"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/thu"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/fri"
                android:textSize="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sat"
                android:textSize="10dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundNumberMenuActivity"
            android:padding="5dp"
            android:weightSum="7">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_view"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/num_7"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_view"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/num_8"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_view"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/num_9"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_view"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/num_10"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_view"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/num_11"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_view"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/num_12"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/custom_view"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/num_13"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llItem1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorBackgroundItemViewActivityMain">

            <View
                android:id="@+id/view_animation_1"
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_view"
                android:src="@drawable/ic_avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/content_item_1"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/time_item_1"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llItem2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorBackgroundItemViewActivityMain">

            <View
                android:id="@+id/view_animation_2"
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_view"
                android:src="@drawable/ic_avatar1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/content_item_2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/time_item_2"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llItem3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorBackgroundItemViewActivityMain">

            <View
                android:id="@+id/view_animation_3"
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_view"
                android:src="@drawable/ic_avatar2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/content_item_3"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/time_item_3"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:src="@android:drawable/ic_input_add" />

    </LinearLayout>

</ScrollView>
