<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarThread"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueLight"
        android:weightSum="3"
        android:layout_margin="2dp">

        <Button
            android:id="@+id/btnAsyncTask"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff8a65"
            android:text="@string/label_async_task"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack" />

        <Button
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:id="@+id/btnThread"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff8a65"
            android:text="@string/label_thread"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/btnHandler"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ff8a65"
            android:text="@string/label_handler"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

    <FrameLayout
        android:layout_margin="2dp"
        android:id="@+id/containerDownload"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
